--- a/public/css/main.css
+++ b/public/css/main.css
@@ -297,7 +297,7 @@ article h3 {
 	position: absolute;
 	top: 150px;
 	left: 70%;
-	width: 15%;
+	width: 12%;
 }
 
 #floating-menu ul {
@@ -313,8 +313,7 @@ article h3 {
 #floating-menu ul li a  {
 	display: block;
 	list-style: none;
-	color: #f5f5f5;
-	border-bottom: 2px solid #fafad2;
+	color: #f5f5f5;s
 	margin-bottom: 5px;
 }
 
